changed styles loading, better styles groups

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
     <link rel="shortcut icon" href="{{ url_for('uploaded_file', filename='evoting-logo.png') }}" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="{{ url_for('get_style') }}">
+    {% block head %}
+    
+    {% endblock %}
 </head>
 <body>
     <header>
