--- a/templates/confirms/delete.html
+++ b/templates/confirms/delete.html
@@ -5,15 +5,19 @@
     Are you sure?
 {% endblock %}
 
+{% block head %}
+    <link rel="stylesheet" href="{{ url_for('get_style', styleFile='delete') }}">
+{% endblock %}
+
 {% block main %}
 
 {% if forbidden %}
-    <section class="card" style="width: 400px;">
-        <h1 style="text-align: center;margin: 2.2rem;">Forbidden</h1>
-        <h2 style="text-align: center;">You don't have access to this resource</h2>
-        <a href="{{ url_for('votes_page') }}" style="margin-top: 2rem;">
+    <section class="card forbidden-card">
+        <h1 class="confirm-heading">Forbidden</h1>
+        <h2 class="confirm-subheading">You don't have access to this resource</h2>
+        <a href="{{ url_for('votes_page') }}">
             <button class="primary-button" style="width: 100%;">
-                <span style="font-size: 1.8rem;">
+                <span class="ts-lg">
                     Back
                 </span>
             </button>
@@ -21,17 +25,17 @@
     </section>
 {% else %}
     <form class="card" method="post" style="width: 400px;">
-        <h1 style="text-align: center;margin: 2.2rem;">Confirm delete</h1>
-        <h2 style="text-align: center;">Are you sure?</h2>
-        <section style="row-gap: .5rem;flex-direction: column;margin-top: 2rem;" class="flex-center">
+        <h1 class="confirm-heading"></h1>>Confirm delete</h1>
+        <h2 class="confirm-subheading"></h2>>Are you sure?</h2>
+        <section class="flex-center confirm-container">
             <button class="danger-button" type="submit" style="width: 100%;">
-                <span style="font-size: 1.8rem;">
+                <span class="ts-lg">
                     YES
                 </span>
             </button>
-            <a href="{{ url_for('votes_page') }}" style="margin-top: 1rem;width: 100%;">
+            <a href="{{ url_for('votes_page') }}">
                 <button class="primary-button" style="width: 100%;" type="button">
-                    <span style="font-size: 1.8rem;">
+                    <span class="ts-lg">
                         NO
                     </span>
                 </button>
