--- a/styles/index.css
+++ b/styles/index.css
@@ -13,20 +13,10 @@
     --second-color:#2A2929;
     --hover-second-color:#3C3C3C;
     --error-background-color:#f19595;
-
     --success-color:#33A008;
     --success-background-color:#98d580;
     --warning-color:#b79f00;
     --warning-background-color:#e9df6b;
-}
-
-.flex {
-    display: flex;
-}
-.flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 body {
@@ -38,47 +28,22 @@ body {
     overflow-x: hidden;
 }
 
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-start {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
 a {
     color: inherit;
 }
 textarea {
     resize: none;
-}
-
-header nav {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    background-color: var(--first-color);
-    column-gap: .5rem;
-    color: white;
-}
-
-
-header nav .app-logo {
-    margin-left: 1.5rem;
-    margin-top: 1.5rem;
-    width: 40px;
-    height: 40px;
-}
-
-header nav .id-heading {
-    font-size: 1rem;
-    font-weight: bold;
-    margin-right: 1rem;
-}
-
-footer .copyright-section {
-    background-color: var(--first-color);
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: white;
-}
-.copyright-section h2 {
-    padding: 1rem;
-    font-size: 1rem;
 }
 
 main {
@@ -87,36 +52,6 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-main .first-heading {
-    color: var(--second-color);
-    font-weight:800;
-    text-align: center;
-}
-
-main .card {
-    margin: 1rem;
-    padding: 2rem;
-    box-shadow: 0 0 25px 3px var(--second-color);
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-}
-
-main .welcome-heading {
-    font-size: 2.5rem;
-    font-weight:800;
-    text-align: center;
-    color: var(--second-color);
-    margin-top: 2rem;
-}
-main .welcome-subtitle {
-    font-size: 1rem;
-    font-weight:800;
-    text-align: center;
-    color: var(--second-color);
-    margin-top: 2rem;
 }
 
 .input-group {
@@ -266,4 +201,88 @@ main .welcome-subtitle {
     border: 3px solid var(--second-color);
     border-radius: 5px;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
+    margin-bottom: 3rem;
+}
+
+.vote-options-container {
+    margin-top: 1rem;
+    column-gap: .5rem;
+}
+
+.vote-options-container h3 {
+    margin-bottom: .5rem;
+}
+.vote-options-container ul {
+    margin-left: 1rem;
+}
+.vote-options-container > .vote-description {
+    margin-top: 1rem;
+    column-gap: .5rem;
+}
+.vote-options-container > .vote-description h3 {
+    margin-bottom: .5rem;
+}
+
+.margin-y {
+    margin: 2rem 0;
+}
+
+.ts-xl {
+    font-size: 2rem;
+}
+.ts-lg {
+    font-size: 1.8rem;
+}
+.ts-md {
+    font-size: 1.4rem;
+}
+.ts-sm {
+    font-size: 1.2rem;
+}
+
+
+header nav {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    background-color: var(--first-color);
+    column-gap: .5rem;
+    color: white;
+}
+
+header nav > section {
+    justify-content:space-between;
+    display:flex;
+    width: 100%;
+    align-items: center;
+}
+
+
+header nav .app-logo {
+    margin-left: 1.5rem;
+    margin-top: 1.5rem;
+    width: 40px;
+    height: 40px;
+}
+header nav .app-logo i {
+    color: white;
+    transform: scale(2);
+}
+
+header nav .id-heading {
+    font-size: 1rem;
+    font-weight: bold;
+    margin-right: 1rem;
+}
+
+.card {
+    margin: 1rem;
+    padding: 2rem;
+    box-shadow: 0 0 25px 3px var(--second-color);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
 }
