--- a/templates/forms/changeEmail.html
+++ b/templates/forms/changeEmail.html
@@ -6,21 +6,25 @@
     Changing E-mail
 {% endblock %}
 
+{% block head %}
+    <link rel="stylesheet" href="{{ url_for('get_style', styleFile='form') }}">
+{% endblock %}
+
 {% block main %}
-<section style="margin-bottom: 2rem;margin-top: 2rem;">
+<section class="form-title">
     <h1 class="secondary-box">Changing email adress</h1>
 </section>
-<form class="card" method="post" style="width: 400px;">
+<form class="card form-card" method="post">
     <section class="input-group">
         <p><i class="fa-solid fa-envelope"></i> Email</p>
         <input type="email" placeholder="new Email" name="email" aria-label="email-input" value="{{ values.email }}">
     </section>
-    <button class="primary-button" style="margin-top: 1rem;" type="submit" aria-label="confirm">
-        <span style="font-size: 1.2rem;" aria-hidden="true">
+    <button class="primary-button margin-y" type="submit" aria-label="confirm">
+        <span class="ts-sm" aria-hidden="true">
             Change email adress
         </span>
     </button>
-    <section style="margin-top: 1rem;">
+    <section class="errors-container">
         {% if errors %}
             {% for value in errors.values() %}
             <p class="error-message"><i class="fa-solid fa-triangle-exclamation"></i> {{ value[0] }}</p>
@@ -28,8 +32,8 @@
         {% endif %}
     </section>
 </form>
-<a class="primary-button" style="margin-top: 2rem;margin-bottom: 2rem;" href="{{ url_for('user_data', id=session.get('idUser')) }}">
-    <span style="font-size: 1.2rem;" aria-hidden="true">
+<a class="primary-button back-button" href="{{ url_for('user_data', id=session.get('idUser')) }}">
+    <span class="ts-sm" aria-hidden="true">
         Back
     </span>
 </a>
