--- a/templates/forms/register.html
+++ b/templates/forms/register.html
@@ -5,11 +5,16 @@
     Registration
 {% endblock %}
 
+
+{% block head %}
+    <link rel="stylesheet" href="{{ url_for('get_style', styleFile='form') }}">
+{% endblock %}
+
 {% block main %}
-<section style="margin-bottom: 2rem;margin-top: 2rem;">
+<section class="form-title">
     <h1 class="secondary-box">User register</h1>
 </section>
-<form class="card" method="post" style="width: 400px;">
+<form class="card form-card" method="post">
     <section class="input-group">
         <p><i class="fa-solid fa-user"></i> name</p>
         <input type="text" placeholder="e.g. Jan" name="name" aria-label="name-input" value="{{ values.name }}">
@@ -30,12 +35,12 @@
         <p><i class="fa-solid fa-key"></i> repeat password</p>
         <input type="password" placeholder="repeat your password" name="confirmPassword" aria-label="confirm-password-input" value="{{ values.confirmPassword }}">
     </section>
-    <button class="primary-button" style="margin-top: 1rem;" type="submit" aria-label="confirm">
-        <span style="font-size: 1.2rem;" aria-hidden="true">
+    <button class="primary-button margin-y" type="submit" aria-label="confirm">
+        <span class="ts-sm" aria-hidden="true">
             Register
         </span>
     </button>
-    <section style="margin-top: 1rem;">
+    <section class="errors-container">
         {% if errors %}
             {% for value in errors.values() %}
             <p class="error-message"><i class="fa-solid fa-triangle-exclamation"></i> {{ value[0] }}</p>
@@ -43,11 +48,11 @@
         {% endif %}
     </section>
 </form>
-<a style="font-size: 1.1rem;margin-top: 2rem;" href="{{ url_for('login_user')}}">
+<a class="already-having-account" href="{{ url_for('login_user')}}">
     I have already an account
 </a>
-<a class="primary-button" style="margin-top: 2rem;margin-bottom: 2rem;" href="{{ url_for('main_page') }}">
-    <span style="font-size: 1.2rem;" aria-hidden="true">
+<a class="primary-button back-button" href="{{ url_for('main_page') }}">
+    <span class="ts-sm" aria-hidden="true">
         Back
     </span>
 </a>
