--- a/templates/confirms/delete.html
+++ b/templates/confirms/delete.html
@@ -25,8 +25,8 @@
     </section>
 {% else %}
     <form class="card" method="post" style="width: 400px;">
-        <h1 class="confirm-heading"></h1>>Confirm delete</h1>
-        <h2 class="confirm-subheading"></h2>>Are you sure?</h2>
+        <h1 class="confirm-heading">Confirm delete</h1>
+        <h2 class="confirm-subheading">Are you sure?</h2>
         <section class="flex-center confirm-container">
             <button class="danger-button" type="submit" style="width: 100%;">
                 <span class="ts-lg">
