--- a/templates/pages/landingPage.html
+++ b/templates/pages/landingPage.html
@@ -28,7 +28,7 @@
     </a>
 </section>
 
-<p class="welcome-subtitle ts-md" aria-label="having-account-paragraph">
+<p class="welcome-subtitle ts-md margin-y" aria-label="having-account-paragraph">
     **if you have an account, just log in 
 </p>
 
