--- a/styles/index.css
+++ b/styles/index.css
@@ -203,8 +203,7 @@ main {
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    max-width: 400px;
-    margin-bottom: 3rem;
+    width: 400px;
 }
 
 .vote-options-container {
@@ -258,6 +257,53 @@ header nav > section {
     display:flex;
     width: 100%;
     align-items: center;
+}
+
+header nav .links-container {
+    column-gap: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 480px) {
+    header nav .links-container {
+        flex-direction: column;
+        row-gap: .3rem;
+        margin-top: .3rem;
+    }
+    header nav {
+        flex-direction: column;
+    }
+    header nav .panel-right {
+        flex-direction: column;
+        margin:1rem 0;
+        row-gap: .3rem;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    header nav .links-container {
+        flex-direction: column;
+        row-gap: .3rem;
+        margin-top: .3rem;
+    }
+    header nav {
+        flex-direction: column;
+    }
+    header nav .panel-right {
+        flex-direction: column;
+        margin:1rem 0;
+        row-gap: .3rem;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+
+}
+
+@media screen and (min-width: 1025px) {
+  
 }
 
 
