--- a/styles/votes.css
+++ b/styles/votes.css
@@ -23,3 +23,40 @@
     width: 600px;
     column-gap: 1rem;
 }
+
+.votes-grid {
+    margin: 3rem 0;
+    padding-bottom: 2rem;
+    display: grid;
+    row-gap: 1rem;
+    column-gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+@media screen and (max-width: 480px) {
+    .votes-search-form {
+        flex-direction: column;
+        width: auto;
+        row-gap: 1.3rem;
+    }
+    .votes-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .votes-search-form {
+        flex-direction: column;
+        width: auto;
+        row-gap: 1.3rem;
+    }
+    .votes-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    .votes-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
