small changes, changes title values in some templates, started creating preview page

--- a/templates/confirms/delete.html
+++ b/templates/confirms/delete.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Are you sure?
+    Are you sure? - E-voting app
 {% endblock %}
 
 {% block head %}
