--- a/templates/forms/changeData.html
+++ b/templates/forms/changeData.html
@@ -3,7 +3,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Changing user Data
+    Changing user Data - E-voting app
 {% endblock %}
 
 {% block head %}
