--- a/templates/forms/changeEmail.html
+++ b/templates/forms/changeEmail.html
@@ -3,7 +3,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Changing E-mail
+    Changing E-mail - E-voting app
 {% endblock %}
 
 {% block head %}
