--- a/templates/forms/changePassword.html
+++ b/templates/forms/changePassword.html
@@ -3,7 +3,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Changing password
+    Changing password - E-voting app
 {% endblock %}
 
 {% block head %}
